--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "flowbite": "^3.1.2",
+    "framer-motion": "^12.23.12",
     "globals": "^15.14.0",
     "tailwindcss": "^4.0.8",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
